--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header span{
     background-color: #F5DD61;
 }
 
-.icon-square .bi {
+.icon-square {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -119,10 +119,28 @@ header span{
     z-index: 2; 
 }
 
-
 .card{
     background-color: #fcd7d7;
 }
 .contac{
     background-color: #f7f455c2;
+}
+
+footer{
+    background-color: #885dfd;
+    color: #ff8fcd;
+}
+
+footer .icon-foo i{
+    font-size: 2.2rem;
+    color: #fcd7d7;
+}
+
+footer p{
+    font-size: 1.1rem;
+    color: #19f1f8;;
+}
+
+footer p a{
+    color: #19f1f8;;
 }
